--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,18 +26,22 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialec
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
 
 
-# JavaMailSender 邮件发送的配置
+# JavaMailSender \u90ae\u4ef6\u53d1\u9001\u7684\u914d\u7f6e
 spring.mail.host=smtp.qq.com
 spring.mail.username=498073785@qq.com
-#QQ邮箱的授权码
+#QQ\u90ae\u7bb1\u7684\u6388\u6743\u7801
 spring.mail.password=hcqhahhwnrnfbgja
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.default-encoding=UTF-8
-spring.mail.port=25
-spring.mail.properties.mail.smtp.socketFactory.port = 25
+spring.mail.port=465
+spring.mail.properties.mail.smtp.socketFactory.port = 465
 spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
 spring.mail.properties.mail.smtp.socketFactory.fallback = false
 
 fromMail=498073785@qq.com
+
+multipart.maxFileSize=500Mb
+multipart.maxRequestSize=500Mb
+
