--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -45,3 +45,7 @@ fromMail=498073785@qq.com
 multipart.maxFileSize=500Mb
 multipart.maxRequestSize=500Mb
 
+pagehelper.dialect=mysql
+pagehelper.reasonable=true
+pagehelper.support-methods-arguments=true
+pagehelper.params=count=countSql
