--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,23 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-rest</artifactId>
         </dependency>
+        <!-- 数据库的druid连接池 -->
+        <dependency>
+          	<groupId>com.alibaba</groupId>
+          	<artifactId>druid</artifactId>
+          	<version>1.0.20</version>
+      	</dependency>
+        <dependency>
+          	<groupId>com.alibaba</groupId>
+          	<artifactId>druid-spring-boot-starter</artifactId>
+          	<version>1.1.0</version>
+      	</dependency>
+      	<!-- 分页插件 -->
+      	<dependency>
+          	<groupId>com.github.pagehelper</groupId>
+          	<artifactId>pagehelper-spring-boot-starter</artifactId>
+          	<version>1.1.2</version>
+      	</dependency>
 	</dependencies>
 
 	<build>
